Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Team__c/Idea_Team__c.object-meta.xml
<CustomObject>
    <label>Idea Team</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>