Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Team__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the project team member doesn&apos;t exist as a user in Salesforce you can add them as a contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N30000009KtNiEAK</relationshipName>
    <type>Lookup</type>
</CustomField>