Reetan.Nayak Dev 25/force-app/main/default/objects/Idea_Team__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Ideas_Projects__c</referenceTo>
    <relationshipName>R00N30000009KtNREA0</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>